@startuml
class MessageScheduledTime {
    - LocalDateTime scheduledTime
    + LocalDateTime getScheduledTime()
    + MessageScheduledTime(LocalDateTime scheduledTime)
}

class MessageSentTime {
    - LocalDateTime sentTime
    + LocalDateTime getSentTime()
    + MessageSentTime(LocalDateTime sentTime)
    + {static} MessageSentTime now()
}

class Member {
    - String name
    + String getName()
}

class ChatRoomName {
    - String name
    + String getName()
}

class ChatRoom {
    - ChatRoomName name
    - List<Member> members
    - List<SentMessage> messages
    + ChatRoomName getName()
    + List<Member> getMembers()
    + List<SentMessage> getMessages()
    + ChatRoom(ChatRoomName name)
    + void addMember(Member member)
    + void removeMember(Member member)
    + void addSentMessage(SentMessage sentMessage)
}

ChatRoom "one" *-- "one" ChatRoomName
ChatRoom "one" *-- "many" Member
ChatRoom "one" *-- "many" SentMessage

abstract class Message {
    # MessageContent content
    - Member sender
    - ChatRoom chatRoom
    + MessageContent getContent()
    + Member getSender()
    + ChatRoom getChatRoom()
}

class MessageContent {
    - String text
    + String getText()
}

class ScheduledMessage {
    - MessageScheduledTime scheduledTime
    + MessageScheduledTime getScheduledTime()

    + void setContent(MessageContent newContent)
    + void setScheduledTime(MessageScheduledTime newScheduledTime)
}

interface SendService {
    + void sendNow(SendNowMessage message)
    + void sendLater(ScheduledMessage message)
}

abstract class SendableMessage {
    + SendResult {abstract} send(SendService scheduler)
}

class SendResult {
    - List<SendResultHandler> handlers
    + void addHandler(SendResultHandler handler)
    + void removeHandler(SendResultHandler handler)
}

interface SendResultHandler {
    + void onSendSuccess(SentMessage sentMessage)
    + void onSendFailure()
}

class SendNowMessage {

}

class SentMessage {
    - MessageSentTime sentTime
    + MessageSentTime getSentTime()
    + {static} SentMessage fromMessage(Message message, MessageSentTime sentTime)
}

Message *-- MessageContent
ScheduledMessage --|> SendableMessage
SentMessage --|> Message
SendableMessage --|> Message
SendNowMessage --|> SendableMessage
ScheduledMessage *-- MessageScheduledTime
SentMessage *-- MessageSentTime

SendableMessage -- SendResult
SendResult .. SendResultHandler
SendResultHandler .. SentMessage

SendableMessage -- SendService

class Scheduler {
    - List<ScheduledMessage> scheduledMessages
    + List<ScheduledMessage> getScheduledMessages()

    + void deleteScheduledMessage(ScheduledMessage message)
    + void setScheduleTime(ScheduledMessage message, MessageScheduledTime newTime)

    + void scheduleMessage(ScheduledMessage message)
}

Scheduler "one" *-- "many" ScheduledMessage
@endumlg